# proposal-skill-builder

./: .env  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: AGENT_BOARD.md  MERGE_POLICY.md  PHASE_BOARD.md
compiled/cases/case_0001/: case_card.md  extraction_report.md  fragments.json  pages.json  source_meta.json
compiled/cases/case_0002/: case_card.md  extraction_report.md  fragments.json  pages.json  source_meta.json
compiled/cases/case_0003/: asset_description_report.md  case_card.md  descriptions.json  extraction_report.md  fragments.json  pages.json  patterns.json  source_meta.json
docs/: HUMAN_REVIEW_GUIDE.md  OPENCLAW_INTEGRATION.md  PUBLISH_CONTRACT.md  QUALITY_RUBRIC.md
outputs/reuse_tests/: luxury-hotel-festival_20260513_182747.md  luxury-hotel-festival_20260513_184133.md  luxury-hotel-festival_20260515_143600.md  meidi-annual-gala_20260514_124617.md  meidi-annual-gala_20260514_124644.md
registry/: skill_registry.json
reports/: batch_compile_report.md  failure_log.md  intake_report.md  skill_check_luxury-hotel-festival.md  skill_check_meidi-annual-gala.md  skill_check_w-hotel-mid-autumn.md
skill_builder/: ai_client.py  asset_describer.py  case_manager.py  cli.py  commands.py  compiler.py  composer.py  compression.py  config.py  db.py  extractor.py  intake.py  office_converter.py  parser.py  pattern_engine.py  project_analyzer.py  publisher.py  quality_checker.py  registry.py  schemas.py  skill_checker.py  strategy_engine.py  utils.py
source_proposals/accepted/: test3.md  test3_copy.md
templates/: output_layout.md
(+23 files in other folders)
